# Dafunk-core

./: Cargo.toml  README.md  reponse.json
examples/: wsr.rs
src/: bot.rs  error.rs  extract.rs  handler.rs  lib.rs  obc.rs  payload.rs  request.rs  response.rs
src/connection/: http.rs  mod.rs  obc.rs  webhook.rs  ws.rs  wsr.rs
src/types/: action.rs  event.rs  mod.rs  response.rs  segment.rs
