[package]
name = "dafunk-core"
version = "0.1.0"
edition = "2021"
authors=["Blindinlights<blindinlights03@gmail.com>"]
license = "MIT"
description = "A core library for the DaFunk."
keywords = ["onebot"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde={version="*", features=["derive"]}
serde_json="*"
futures="*"
tokio={version="*", features=["full"]}
tokio-tungstenite="*"
async-stream="*"
log="*"
http="*"
hyper={version="*", features=["full"]}
thiserror="1.0.40"
rand="*"