[package]
name = "dafunk-core"
version = "0.1.1"
edition = "2021"
authors=["Blindinlights<blindinlights03@gmail.com>"]
license = "MIT"
description = "A core library for the DaFunk."
keywords = ["onebot"]
repository="https://github.com/Blindinlights-cc/Dafunk-core"
readme = "README.md"
[dependencies]
serde={version="1.0.171", features=["derive"]}
serde_json="1.0.103"
futures="0.3.28"
[dev-dependencies]
tokio-tungstenite="0.19.0"
tokio={features = ["full"],version = "1.29.1"}
hyper={version="0.14.27", features=["full"]}

[features]

[[example]]
name="wsr"
path="examples/wsr.rs"

